# todo-list-empiretech-back

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
tests/: conftest.py  test_routes.py
todo_list_empiretech_back/: __init__.py  models.py  routes.py  schemas.py  settings.py
