[project]
name = "todo-list-empiretech-back"
version = "0.1.0"
description = ""
authors = [
    {name = "DsML01",email = "davimelovas61@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.11,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'
filterwarnings = [
    "ignore::ResourceWarning",
    "ignore::DeprecationWarning",
]

[tool.taskipy.tasks]
lint = 'ruff check --fix'
pre_format = 'task lint'
format = 'ruff format'
run = 'python3 main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=todo_list_empiretech_back -vv'
post_test = 'coverage html'
coverage = 'xdg-open htmlcov/index.html'

